--- a/public/home.html
+++ b/public/home.html
@@ -15,9 +15,11 @@
   <body class="home-page__body">
     <header class="home-page__header appbar">
       <!-- logo -->
-      <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
-      </a>
+      <div class="appbar__section">
+        <a class="logo" href="home.html"
+          ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
+        </a>
+      </div>
     </header>
     <main class="home-page__main main">
       <section class="home-page__copy">
