Update appbar on register page

--- a/public/register.html
+++ b/public/register.html
@@ -10,9 +10,11 @@
   <body class="register-page__body">
     <header class="register-page__header appbar">
       <!-- logo -->
-      <a class="logo" href="home.html"
-        ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
-      </a>
+      <div class="appbar__section">
+        <a class="logo" href="home.html"
+          ><img class="logo__img" src="./images/App-Icon.svg" alt="" />
+        </a>
+      </div>
     </header>
     <main class="register-page__main main">
       <section class="register-page__form">
