Design home page for extra large tablet

--- a/public/home.html
+++ b/public/home.html
@@ -24,15 +24,13 @@
     <main class="home-page__main main">
       <section class="home-page__copy">
         <!-- heading -->
-        <h1 class="headline">Home Heading Example</h1>
+        <h1 class="headline">Connect, Share, Enjoy your time!</h1>
         <p class="subheadline">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse harum,
-          omnis repellendus excepturi quae veritatis tempora qui nostrum hic a
-          sunt saepe cumque officia praesentium voluptas non quod! Maiores,
-          voluptates?
+          Eerkel is amazing social media app to make new friends, connect with
+          family, share ideas, and find new inspirations!
         </p>
         <div class="home-page__btn-wrapper btn-wrapper">
-          <button class="btn">Get Started</button>
+          <a class="btn" href="./login.html">Get Started</a>
         </div>
       </section>
 
