Redesign chat page

--- a/public/chat.html
+++ b/public/chat.html
@@ -54,62 +54,102 @@
     <!-- main -->
     <main class="chat-page__main main">
       <section class="chat-page__messages">
-        <div class="message-list">
-          <!-- item 1 -->
-          <div class="message">
-            <div class="message__avatar-wrapper">
-              <img src="./images/profile.jpg" alt="" class="message__avatar" />
+        <div class="chat-page__message-wrapper">
+          <div class="message-list">
+            <!-- item 1 -->
+            <div class="message">
+              <div class="message__avatar-wrapper">
+                <img
+                  src="./images/profile.jpg"
+                  alt=""
+                  class="message__avatar"
+                />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
             </div>
-            <div class="message__message-buble">
-              <p class="message__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque
-                vero voluptate cum. Fugiat rem ex quo provident!
-              </p>
-            </div>
-          </div>
 
-          <!-- item 2 -->
-          <div class="message message--right">
-            <div class="message__avatar-wrapper">
-              <img src="./images/user01.jpg" alt="" class="message__avatar" />
+            <!-- item 2 -->
+            <div class="message message--right">
+              <div class="message__avatar-wrapper">
+                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
             </div>
-            <div class="message__message-buble">
-              <p class="message__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque
-                vero voluptate cum. Fugiat rem ex quo provident!
-              </p>
-            </div>
-          </div>
 
-          <!-- item 3 -->
-          <div class="message">
-            <div class="message__avatar-wrapper">
-              <img src="./images/profile.jpg" alt="" class="message__avatar" />
+            <!-- item 3 -->
+            <div class="message">
+              <div class="message__avatar-wrapper">
+                <img
+                  src="./images/profile.jpg"
+                  alt=""
+                  class="message__avatar"
+                />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
             </div>
-            <div class="message__message-buble">
-              <p class="message__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque
-                vero voluptate cum. Fugiat rem ex quo provident!
-              </p>
-            </div>
-          </div>
 
-          <!-- item 4 -->
-          <div class="message message--right">
-            <div class="message__avatar-wrapper">
-              <img src="./images/user01.jpg" alt="" class="message__avatar" />
+            <!-- item 4 -->
+            <div class="message message--right">
+              <div class="message__avatar-wrapper">
+                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
             </div>
-            <div class="message__message-buble">
-              <p class="message__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque
-                vero voluptate cum. Fugiat rem ex quo provident!
-              </p>
+
+            <!-- item 5 -->
+            <div class="message">
+              <div class="message__avatar-wrapper">
+                <img
+                  src="./images/profile.jpg"
+                  alt=""
+                  class="message__avatar"
+                />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
+            </div>
+
+            <!-- item 6 -->
+            <div class="message message--right">
+              <div class="message__avatar-wrapper">
+                <img src="./images/user01.jpg" alt="" class="message__avatar" />
+              </div>
+              <div class="message__message-buble">
+                <p class="message__text">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Cumque vero voluptate cum. Fugiat rem ex quo provident!
+                </p>
+              </div>
             </div>
           </div>
         </div>
 
         <!-- chat form -->
-        <form class="chat-form">
+        <form class="chat-page__chat-form chat-form">
           <input
             class="chat-form__input-control"
             id="message"
