Redesign chat friends list

--- a/public/chat.html
+++ b/public/chat.html
@@ -55,7 +55,7 @@
     <main class="chat-page__main main">
       <section class="chat-page__messages">
         <div class="chat-page__message-wrapper">
-          <div class="message-list">
+          <div class="chat-page__list message-list">
             <!-- item 1 -->
             <div class="message">
               <div class="message__avatar-wrapper">
@@ -174,84 +174,117 @@
         </form>
       </section>
       <aside class="chat-page__friends">
-        <div class="chat-friends">
-          <h2 class="subtitle">Friends List</h2>
-          <div class="chat-friends-list">
-            <!-- item 1 -->
-            <div class="chat-friend chat-friend--active">
-              <div class="chat-friend__avatar-status">
-                <div class="chat-friend__avatar-wrapper">
-                  <img
-                    src="./images/user01.jpg"
-                    alt=""
-                    class="chat-friend__avatar"
-                  />
-                  <span class="chat-friend__status"></span>
+        <div class="chat-page__chat-friends">
+          <h2 class="chat-page__subtitle subtitle">Friends List</h2>
+          <div class="chat-page__friends-list">
+            <div class="chat-friends-list">
+              <!-- item 1 -->
+              <div class="chat-friend chat-friend--active">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user01.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
+                <span class="chat-friend__name">Friend 1</span>
               </div>
-              <span class="chat-friend__name">Friend 1</span>
-            </div>
 
-            <!-- item 2 -->
-            <div class="chat-friend">
-              <div class="chat-friend__avatar-status">
-                <div class="chat-friend__avatar-wrapper">
-                  <img
-                    src="./images/user02.jpg"
-                    alt=""
-                    class="chat-friend__avatar"
-                  />
-                  <span class="chat-friend__status"></span>
+              <!-- item 2 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user02.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
+                <span class="chat-friend__name">Friend 2</span>
               </div>
-              <span class="chat-friend__name">Friend 2</span>
-            </div>
 
-            <!-- item 3 -->
-            <div class="chat-friend">
-              <div class="chat-friend__avatar-status">
-                <div class="chat-friend__avatar-wrapper">
-                  <img
-                    src="./images/user03.jpg"
-                    alt=""
-                    class="chat-friend__avatar"
-                  />
-                  <span class="chat-friend__status"></span>
+              <!-- item 3 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user03.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
+                <span class="chat-friend__name">Friend 3</span>
               </div>
-              <span class="chat-friend__name">Friend 3</span>
-            </div>
 
-            <!-- item 4 -->
-            <div class="chat-friend">
-              <div class="chat-friend__avatar-status">
-                <div class="chat-friend__avatar-wrapper">
-                  <img
-                    src="./images/user04.jpg"
-                    alt=""
-                    class="chat-friend__avatar"
-                  />
-                  <span class="chat-friend__status"></span>
+              <!-- item 4 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user04.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
+                <span class="chat-friend__name">Friend 4</span>
               </div>
-              <span class="chat-friend__name">Friend 4</span>
-            </div>
 
-            <!-- item 5 -->
-            <div class="chat-friend">
-              <div class="chat-friend__avatar-status">
-                <div class="chat-friend__avatar-wrapper">
-                  <img
-                    src="./images/user05.jpg"
-                    alt=""
-                    class="chat-friend__avatar"
-                  />
-                  <span class="chat-friend__status"></span>
+              <!-- item 5 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user05.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
                 </div>
+                <span class="chat-friend__name">Friend 5</span>
               </div>
-              <span class="chat-friend__name">Friend 5</span>
+
+              <!-- item 6 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user06.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 6</span>
+              </div>
+
+              <!-- item 7 -->
+              <div class="chat-friend">
+                <div class="chat-friend__avatar-status">
+                  <div class="chat-friend__avatar-wrapper">
+                    <img
+                      src="./images/user07.jpg"
+                      alt=""
+                      class="chat-friend__avatar"
+                    />
+                    <span class="chat-friend__status"></span>
+                  </div>
+                </div>
+                <span class="chat-friend__name">Friend 7</span>
+              </div>
             </div>
           </div>
+
           <div class="chat-page__btn-wrapper btn-wrapper">
             <a class="btn" href="#">Find Friends</a>
           </div>
