Change profile img and name

--- a/public/chat.html
+++ b/public/chat.html
@@ -37,11 +37,9 @@
       <div class="appbar__section appbar__section--right">
         <div class="profile-dropdown">
           <div class="profile-dropdown__img-wrapper">
-            <img
-              class="profile-dropdown__img"
-              src="./images/profile.jpg"
-              alt=""
-            />
+            <div class="profile-dropdown__img">
+              <span class="profile-dropdown__name">J</span>
+            </div>
           </div>
           <div class="profile-dropdown__content">
             <a href="#" class="profile-dropdown__link">Profile</a>
