Add more friends

--- a/public/friendslist.html
+++ b/public/friendslist.html
@@ -90,6 +90,98 @@
               </svg>
             </button>
           </div>
+
+          <!-- item 2 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <div class="friends__img">
+                <span class="friends__img-name">F2</span>
+              </div>
+            </div>
+            <span class="friends__name">Friend 2</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 3 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <div class="friends__img">
+                <span class="friends__img-name">F3</span>
+              </div>
+            </div>
+            <span class="friends__name">Friend 3</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 4 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <div class="friends__img">
+                <span class="friends__img-name">F4</span>
+              </div>
+            </div>
+            <span class="friends__name">Friend 4</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
+
+          <!-- item 5 -->
+          <div class="friends__item">
+            <div class="friends__avatar">
+              <div class="friends__img">
+                <span class="friends__img-name">F5</span>
+              </div>
+            </div>
+            <span class="friends__name">Friend 5</span>
+            <button class="btn btn--40 btn--rounded">
+              <svg
+                class="btn__icon"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="black"
+                width="24px"
+                height="24px"
+              >
+                <path d="M0 0h24v24H0z" fill="none" />
+                <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+              </svg>
+            </button>
+          </div>
         </div>
       </section>
     </main>
